hack/manifests/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: praxis-extproc
  namespace: default
  labels:
    app.kubernetes.io/name: praxis-extproc
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: e2e-gateway
  configPatches:
    - applyTo: CLUSTER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          name: praxis-extproc-grpc
          type: STRICT_DNS
          connect_timeout: 5s
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                validation_context:
                  trust_chain_verification: ACCEPT_UNTRUSTED
              sni: praxis.praxis-extproc.svc.cluster.local
          load_assignment:
            cluster_name: praxis-extproc-grpc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: praxis.praxis-extproc.svc.cluster.local
                          port_value: 9004
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ext_proc
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
            grpc_service:
              envoy_grpc:
                cluster_name: praxis-extproc-grpc
              timeout: 300s
            message_timeout: 300s
            processing_mode:
              request_header_mode: SEND
              response_header_mode: SEND
              request_body_mode: FULL_DUPLEX_STREAMED
              response_body_mode: FULL_DUPLEX_STREAMED
              request_trailer_mode: SEND
              response_trailer_mode: SEND
